FIx on dropdown menu flickering

--- a/site/components/common/UserNav/UserNav.module.css
+++ b/site/components/common/UserNav/UserNav.module.css
@@ -12,7 +12,8 @@
 }
 
 .item:hover {
-  @apply text-accent-6 transition scale-110 duration-100;
+  /* @apply text-accent-6 transition scale-110 duration-100; */
+  @apply text-accent-6 transition;
 }
 
 .item:first-child {
